--- a/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_foreign_user.xml
@@ -146,7 +146,7 @@
                         <TextView
                             android:id="@+id/user_dislikes"
                             style="@style/ProfileNumberDivespotsSrtyle"
-                            android:text="9" />
+                            tools:text="9" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
