--- a/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_leave_review.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f6f6f6">
     <include layout="@layout/view_toolbar" />
@@ -85,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#9f9f9f"
-                android:text="250"/>
+                tools:text="250"/>
         <EditText
             android:inputType="text|textFilter|textMultiLine"
             android:gravity="top"
@@ -113,7 +115,7 @@
             android:textColor="#9f9f9f"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="symbols left"/>
+            android:text="@string/symbols_left"/>
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
