--- a/trunk/ddscanner/app/src/main/res/layout/dive_center_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_center_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="85dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <RelativeLayout
@@ -27,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:lines="1"
-            android:text="23131323123"
+            tools:text="23131323123"
             android:ellipsize="end"
             android:layout_marginRight="10dp"
             android:layout_toRightOf="@+id/dc_avatar"
