--- a/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_notification.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -53,7 +54,7 @@
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#a3a3a3"
-            android:text="1w"/>
+            tools:text="1w"/>
         </android.support.percent.PercentRelativeLayout>
     </LinearLayout>
     <ImageView
