--- a/trunk/ddscanner/app/src/main/res/layout/activity_no_location_providers.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_no_location_providers.xml
@@ -17,16 +17,9 @@
             android:src="@drawable/ic_nolocation" />
         <TextView
             android:id="@+id/text"
-            android:layout_width="263dp"
-            android:layout_height="wrap_content"
             android:layout_below="@+id/icon"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:layout_marginTop="16dp"
-            android:text="@string/can_not_locate"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text"
-            android:textSize="20sp" />
+            style="@style/ErrorsViewTitleStyle"
+            android:text="@string/can_not_locate" />
         <TextView
             android:id="@+id/subtext"
             android:layout_width="263dp"
