--- a/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_spot_photos_list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="@dimen/image_in_divespot_small"
     android:layout_height="@dimen/image_in_divespot_small"
@@ -25,7 +26,7 @@
         android:layout_height="match_parent"
         android:background="@color/black_text"
         android:alpha="0.9"
-        android:text="+1"
+        tools:text="@string/_1"
         android:textColor="@color/white"
         android:gravity="center"
         android:textSize="20sp"
