--- a/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_maplist.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <android.support.design.widget.CoordinatorLayout
@@ -89,7 +90,7 @@
                 android:layout_marginTop="20dp"
                 android:ellipsize="end"
                 android:lines="1"
-                android:text="Racha yai wrecks fds fds fds fsdf sdf sd ds"
+                tools:text="Racha yai wrecks fds fds fds fsdf sdf sd ds"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
 
@@ -110,7 +111,7 @@
                 android:layout_below="@+id/rating"
                 android:layout_marginLeft="22dp"
                 android:layout_marginTop="3dp"
-                android:text="Wreck"
+                tools:text="Wreck"
                 android:textColor="@color/white" />
 
             <ImageView
@@ -176,7 +177,7 @@
                 android:layout_marginTop="174dp"
                 android:layout_height="wrap_content"
                 style="@style/OrangeButtons"
-                android:text="continue"/>
+                android:text="@string/continue_search"/>
         </RelativeLayout>
     </RelativeLayout>
 
