--- a/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/reviews_photo_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="60dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="60dp"
     android:layout_height="60dp"
     android:layout_marginRight="8dp">
     <ImageView
@@ -24,7 +26,7 @@
         android:layout_height="match_parent"
         android:background="@color/black_text"
         android:alpha="0.9"
-        android:text="+1"
+        tools:text="+1"
         android:textColor="@color/white"
         android:gravity="center"
         android:textSize="20sp"
