--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_dive_spot.xml
@@ -59,18 +59,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/ic_addds_plus"
-                    android:clickable="true" />
+                    android:paddingRight="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:scaleType="fitCenter"
+                    android:paddingLeft="15dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_addds_plus"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/photos_rc"
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
                     android:layout_below="@+id/btn_add_photo"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="15dp" />
+                    android:layout_marginLeft="10dp" />
 
             </RelativeLayout>
 
@@ -416,8 +418,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginTop="15dp"
+                    android:paddingRight="15dp"
+                    android:paddingTop="15dp"
+                    android:paddingBottom="15dp"
+                    android:scaleType="fitCenter"
+                    android:paddingLeft="15dp"
+                    android:background="@android:color/transparent"
                     android:src="@drawable/ic_addds_plus" />
 
                 <android.support.v7.widget.RecyclerView
@@ -427,7 +433,6 @@
                     android:layout_below="@+id/btn_add_sealife"
                     android:layout_marginBottom="15dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
                     android:visibility="visible" />
             </RelativeLayout>
 
