--- a/trunk/ddscanner/app/src/main/res/layout/item_guide.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_guide.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="59dp"
         android:gravity="center_vertical"
+        android:textSize="16sp"
         android:layout_marginLeft="15dp"
         android:textColor="@color/black_text"
         tools:text="How to become an expert?"/>
