--- a/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_notifications.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swiperefresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <android.support.design.widget.TabLayout
         android:id="@+id/notif_tab_layout"
         style="@style/tabLayout"
@@ -24,16 +28,15 @@
         app:pv_circular="true"
         app:pv_progressMode="indeterminate"
         app:pv_progressStyle="@style/CircularProgress" />
-
     <android.support.v4.view.ViewPager
         android:id="@+id/notif_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/notif_tab_layout"
         android:visibility="gone" />
-
     <com.ddscanner.ui.views.LoginView
         app:title="@string/notifications_need_to_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </RelativeLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
